--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	<section class="portfolio overflow-x-hidden" id="portfolio">
 		<div class="inner-portfolio">
 			<div class="top-inner-portfolio">
-				<h2 class="layout-h2 text-center">PORTFOLIO</h2>
+				<h2 class="layout-h2 text-center"></h2>
 			</div>
 			
 			<div class="portfolio-gallery">
